Updated documentation, test
