# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -5,7 +5,7 @@ import { AuthenticateUserUseCase } from "./AuthenticateUserUseCase";
 
 class AuthenticateUserController {
     async handle(request: Request, response: Response): Promise<Response> {
-        const { email, password } = request.body;
+        const { password, email } = request.body;
 
         const authenticateUserUseCase = container.resolve(
             AuthenticateUserUseCase
